Fix runtime error for can not load main classfile in jar.